# vr-voxel-game

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  test.s
assembler/: CMakeLists.txt
assembler/src/: assemble.c
emulator/: CMakeLists.txt
emulator/src/: decoder.c  decoder.h  emulate.c  executer.c  executer.h  memory.c  memory.h  state.c  state.h
game/: CMakeLists.txt
game/hardware/controller/controller/: .gitignore  CMakeLists.txt  bluetooth_stuff.c  bluetooth_stuff.gatt  controller.c  descriptor.wara  hardware_stuff.c  hardware_stuff.h  lwipopts.h
game/src/: CMakeLists.txt  analytics.c  analytics.h  arc.c  arc.h  block.h  camera.c  camera.h  chunk.c  chunk.h  chunkmesh.c  entity.c  entity.h  font.c  font.h  gl.c  gles2.c  hud.c  hud.h  input.c  input.h  item.h  lighting.c  lighting.h  main.c  noise.c  noise.h  player.c  player.h  postprocess.c  postprocess.h  queue.c  queue.h  rendering.c  rendering.h  shaderutil.c  shaderutil.h  spscqueue.c  spscqueue.h  structure.h  (+6 more)
game/src/hardware/: .quaternion.c.swo  CMakeLists.txt  analyse.py  icm42688.c  icm42688.h  icm42688_consts.h  kalman.tex  kalman.txt  linalg.c  linalg.h  matrix_inverse.py  orientation.c  orientation.h  quaternion.c  quaternion.h  test.c  test.h  testlinalg.c
game/src/shaders/: basic.frag  basic.vert  blockEntity.frag  blockFrame.frag  blockItem.frag  chunk.frag  chunk.vert  font.frag  font.vert  postprocess.frag  postprocess.vert
lib/: CMakeLists.txt
lib/datastructs/: datastructs.c  datastructs.h  test.c
lib/futil/: futil.c  futil.h
lib/logging/: logging.c  logging.h
